<resources>
    <string name="app_name">Pokemon</string>

    <!-- Labels -->
    <string name="weight">Weight</string>
    <string name="base_happiness">Base Happiness</string>
    <string name="type">Type</string>
    <string name="pokenumbers">Pokedex Numbers</string>
    <string name="abilities">Abilities</string>
    <string name="base_stats">Base Stats</string>
    <string name="moves">Moves</string>

    <!-- Messages -->
    <string name="no_pokes">No pokemons to display</string>
</resources>