<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.tekever.pokemon.view.ui.pokedetails.PokemonViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{safeUnbox(viewmodel.dataLoading) ? View.GONE : View.VISIBLE}">
                <LinearLayout
                    android:id="@+id/llImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <ImageView
                        android:id="@+id/ivDefault"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_weight="5"/>
                    <ImageView
                        android:id="@+id/ivShiny"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_weight="5"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/llImage"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/tvID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{'#' + String.valueOf(viewmodel.pokemon.id) + ' ' + '-'}"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{Character.toUpperCase(viewmodel.pokemon.name.charAt(0)) + viewmodel.pokemon.name.substring(1)}"
                        android:layout_toRightOf="@+id/tvID"
                        android:layout_marginLeft="5dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvWeightLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/tvName"/>
                    <TextView
                        android:id="@+id/tvWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewmodel.pokemon.weight) + ' ' + 'K' + 'g'}"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/tvWeightLabel"
                        android:layout_below="@+id/tvName"/>
                    <TextView
                        android:id="@+id/tvHappinessLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_happiness"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/tvWeightLabel"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewmodel.species.base_happiness)}"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/tvHappinessLabel"
                        android:layout_below="@+id/tvWeightLabel"/>
                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:layout_below="@id/tvHappinessLabel"
                        android:layout_marginTop="10dp"/>
                    <LinearLayout
                        android:id="@+id/llType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/tvType">
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvPoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pokenumbers"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/llType"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPDex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvPoke"/>
                    <TextView
                        android:id="@+id/tvAbilities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abilities"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/rvPDex"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAbilities"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvAbilities" />
                    <TextView
                        android:id="@+id/tvBaseStats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_stats"
                        android:layout_below="@+id/rvAbilities"
                        android:layout_marginTop="10dp"/>
                    <LinearLayout
                        android:id="@+id/llBaseStats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvBaseStats"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/llHP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvHpName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[0].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[0].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbHP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[0].base_stat}"
                                android:progressBackgroundTint="#FF0000"
                                android:progressTint="#FF0000"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llAttack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvAttkName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[1].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[1].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbAttk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[1].base_stat}"
                                android:progressBackgroundTint="#F08030"
                                android:progressTint="#F08030"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llDefense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvDefName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[2].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[2].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbDef"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[2].base_stat}"
                                android:progressBackgroundTint="#F8D030"
                                android:progressTint="#F8D030"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llSpAttk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvSpAttkName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[3].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[3].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbSpAttk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[3].base_stat}"
                                android:progressBackgroundTint="#6890F0"
                                android:progressTint="#6890F0"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llSpDef"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvSpDefName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[4].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[4].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbSpDef"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[4].base_stat}"
                                android:progressBackgroundTint="#78C850"
                                android:progressTint="#78C850"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tvSpeedName"
                                android:layout_width="135dp"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.pokemon.stats[5].stat.name.toUpperCase()}"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@{'(' + String.valueOf(viewmodel.pokemon.stats[5].base_stat) + ')'}"/>
                            <ProgressBar
                                android:id="@+id/pbSpeed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="false"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:max="252"
                                android:progress="@{viewmodel.pokemon.stats[5].base_stat}"
                                android:progressBackgroundTint="#F85888"
                                android:progressTint="#F85888"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvMoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/llBaseStats"
                        android:text="@string/moves"
                        android:layout_marginTop="10dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMoves"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvMoves" />

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{safeUnbox(viewmodel.dataLoading) ? View.VISIBLE : View.GONE}" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="No pokemon to display"
            android:textSize="18sp"
            android:visibility="@{safeUnbox(viewmodel.empty) ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</layout>